Fixed spacing issue with longer recipe names on RecipeList page

--- a/public/styles.css
+++ b/public/styles.css
@@ -413,6 +413,7 @@
 
     #ListingImageContainer {
         align-self: center;
+        z-index: 1;
     }
 
     #ListingImageContainer:hover {
@@ -427,9 +428,10 @@
     #ListingDetailsContainer {
         position: relative;
         top: 50%;
+        max-height: 50%;
         pointer-events: none;
     }
-
+    
     #ListingNameContainer {
         height: 35%;
         text-decoration: none;
@@ -444,21 +446,21 @@
     }
 
     #ListingIngredientsAndFavContainer {
-        margin-top: 1vh;
-        align-self: baseline;
-        display: none;
-        width: 88%;
-        padding-left: 5%;
     }
 
     #ListingIngredientsList {
         overflow: hidden;
         width: 100%;
         text-decoration: none;
+        display: none;
     }
 
     #ListingFavContainer {
         color: lightblue;
+        position: absolute;
+        left: 42.5%;
+        bottom: -17vh;
+        pointer-events: all;
     }
 
     #ListingFavText {
